--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/nhmatsumoto/reader#readme",
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "tailwindcss": "^3.3.5",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
